Agregada meta keywords

--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ejercicio html etiquetas de texto básicas</title>
-	<meta charset="utf-8"/>
-
+	<title>Ejercicio html etiquetas de texto básicas</title>		<meta charset="utf-8"/>
+<meta name="keyword"
 <style>
 body{
   font-family: sans-serif;
